--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "build:watch": "tsc --watch",
     "clean": "tsc --build --clean",
     "lint": "eslint . --ext .ts",
-    "prepare": "npm run build",
-    "test": "npm-run-all lint test:*",
-    "test:jest": "npm run build && jest --no-cache"
+    "prepare": "pnpm run build",
+    "test": "concurrently -c \"auto\" pnpm:lint pnpm:test:*",
+    "test:jest": "pnpm run build && jest --no-cache"
   },
   "dependencies": {
     "@lint-todo/utils": "^13.1.0",
@@ -44,6 +44,7 @@
     "@types/tmp": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "concurrently": "^8.2.2",
     "date-fns": "^2.16.1",
     "eslint": "^8.4.0",
     "eslint-config-prettier": "^7.1.0",
