--- a/package.json
+++ b/package.json
@@ -46,23 +46,32 @@
     "@typescript-eslint/parser": "^5.31.0",
     "concurrently": "^8.2.2",
     "date-fns": "^2.16.1",
-    "eslint": "^8.4.0",
+    "eslint": "^8.5.7",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-jest": "^26.7.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unicorn": "^43.0.2",
-    "jest": "^26.5.2",
+    "eslint-plugin-unicorn": "^55.0.0",
+    "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "release-it": "^14.2.0",
     "release-it-lerna-changelog": "^3.1.0",
     "tmp": "^0.2.1",
-    "ts-jest": "^26.4.1",
+    "ts-jest": "^29.2.5",
+    "tslib": "^2.7.0",
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
     "eslint": "^8.4.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "eslint": "8.57.0"
+    },
+    "patchedDependencies": {
+      "eslint@8.57.0": "patches/eslint@8.36.0.patch"
+    }
   },
   "engines": {
     "node": ">= 14"
