--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "strip-ansi": "^6.0.0",
     "text-table": "^0.2.0",
     "type-fest": "^0.20.2",
+    "upath": "^2.0.1",
     "validate-peer-dependencies": "^2.1.0"
   },
   "devDependencies": {
